cli/tests/snapshots/arguments__device_add_nodiscard.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"device\", \"add\", \"-K\", \"/dev/sdb\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Device(
        DeviceCommand {
            subcommand: Add(
                DeviceAddCommand {
                    force: false,
                    nodiscard: true,
                    enqueue: false,
                    devices: [
                        "/dev/sdb",
                    ],
                    target: "/mnt",
                },
            ),
        },
    ),
}
