cli/tests/snapshots/arguments__device_ready.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"device\", \"ready\", \"/dev/sda1\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Device(
        DeviceCommand {
            subcommand: Ready(
                DeviceReadyCommand {
                    device: "/dev/sda1",
                },
            ),
        },
    ),
}
