cli/tests/snapshots/arguments__device_remove.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"device\", \"remove\", \"/dev/sdb\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Device(
        DeviceCommand {
            subcommand: Remove(
                DeviceRemoveCommand {
                    args: [
                        "/dev/sdb",
                        "/mnt",
                    ],
                },
            ),
        },
    ),
}
