cli/tests/snapshots/arguments__device_scan.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"device\", \"scan\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Device(
        DeviceCommand {
            subcommand: Scan(
                DeviceScanCommand {
                    forget: false,
                    devices: [],
                },
            ),
        },
    ),
}
