cli/tests/snapshots/arguments__device_stats.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"device\", \"stats\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Device(
        DeviceCommand {
            subcommand: Stats(
                DeviceStatsCommand {
                    check: false,
                    reset: false,
                    path: "/mnt",
                },
            ),
        },
    ),
}
