cli/tests/snapshots/arguments__filesystem_defrag.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"filesystem\", \"defragment\", \"/mnt/file\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Filesystem(
        FilesystemCommand {
            subcommand: Defragment(
                FilesystemDefragCommand {
                    verbose: 0,
                    recursive: false,
                    flush: false,
                    compress: None,
                    compress_level: None,
                    nocomp: false,
                    start: None,
                    len: None,
                    target: None,
                    step: None,
                    paths: [
                        "/mnt/file",
                    ],
                },
            ),
        },
    ),
}
