cli/tests/snapshots/arguments__filesystem_df.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"filesystem\", \"df\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Filesystem(
        FilesystemCommand {
            subcommand: Df(
                FilesystemDfCommand {
                    path: "/mnt",
                },
            ),
        },
    ),
}
