cli/tests/snapshots/arguments__filesystem_df_missing_path.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"filesystem\", \"df\"])"
---
error: the following required arguments were not provided:
  <PATH>
